<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlockO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="event_name_hint">(Event Name)</string>
    <string name="new_event_name">New Event +</string>
    <string name="save_name">Save</string>
    <string name="discard_name">Discard</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Date</string>
    <string name="event_points">Points</string>
    <string name="event_points_hint">(Points)</string>
    <string name="event_time">Time</string>
    <string name="export_name">Export</string>
    <string name="delete_name">Delete</string>
    <string name="view_name">View</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="event_time_hint">(Time)</string>

</resources>
