<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/slidingLayoutMainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="bottom"
    sothree:shadowHeight="4dp"
    sothree:paralaxOffset="100dp" >

    <com.hb.views.PinnedSectionListView
	    android:id="@+id/listViewEvents"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
    />
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
     <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:id="@+id/dragViewActionBar"
	    	>
    <Button
        android:id="@+id/buttonAddNewEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_event_name"
        android:textSize="32sp"
        android:background="?android:attr/selectableItemBackground"
   		 />
    
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/save_name"
        android:visibility="gone"
        />
    
   <View
        android:id="@+id/dividerLine"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#55000000"
        />
    
    <Button
        android:id="@+id/buttonDiscard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"	
        android:text="@string/discard_name"
        android:visibility="gone"
        />
    
    </LinearLayout>
    
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
         
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="false" >
    
    <TextView
        android:id="@+id/textViewEventsName"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textStyle="bold|italic"
        android:text="@string/event_name"
        />
    
    <EditText
        android:id="@+id/editTextEventName"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:layout_below="@id/textViewEventsName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name_hint"
        android:background="@drawable/edittext_basic_layout"
        android:padding="10dp"
        android:textSize="26sp" />
    
    <TextView
        android:id="@+id/textViewEventDate"
        android:layout_below="@id/editTextEventName"
        android:layout_marginTop="15dp"
        android:textStyle="bold|italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/event_date"
        />
    
    <EditText 
        android:id="@+id/editTextEventDate"
        android:hint="@string/event_date"
        android:layout_below="@id/textViewEventDate"
        android:layout_marginTop="10dp"
     	android:clickable="false"
     	android:minEms="10"
     	android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    
    <TextView
        android:id="@+id/textViewEventTime"
        android:layout_below="@id/editTextEventName"
        android:layout_toRightOf="@id/editTextEventDate"
        android:layout_alignBaseline="@id/textViewEventDate"
        android:layout_marginLeft="5dp"
         android:textStyle="bold|italic"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/event_time"
        />
    
    <EditText
        android:id="@+id/editTextEventTime"
        android:hint="@string/event_points"
        android:inputType="number"
        android:layout_below="@id/textViewEventDate"
        android:layout_toRightOf="@id/editTextEventDate"
        android:layout_marginTop="10dp"
        android:minEms="5"
        android:layout_alignLeft="@id/textViewEventTime"
     	android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    
    <TextView
        android:id="@+id/textViewEventPoints"
        android:layout_below="@id/editTextEventDate"
        android:layout_marginTop="15dp"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic"
        android:text="@string/event_points"
        />
    
    <EditText
        android:id="@+id/editTextEventPoints"
        android:layout_marginTop="10dp"
        android:layout_below="@id/textViewEventPoints"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/event_points_hint"
        android:background="@drawable/edittext_basic_layout"
        android:padding="10dp"
        android:textSize="26sp" />
       
    </RelativeLayout>
     </ScrollView>
     </LinearLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>